Changes 0.9.2 -> 
* On shutdown peers were sent a DPR with disconnect-cause='busy' instead of the
  (correct) 'rebooting' cause.
* It is now possible to have a (small) grace period for making a clean
  shutdown of connections waiting for reception of DPA. This has mostly
  academic interest. The default is to send DPR and close immediately.
* An CEA was erroneously sent as response to an unhandled CEA

Changes 0.9.1 -> 0.9.2
* Reset TCP connection when non-diameter traffic is encountered (RFC3588
  section 8). Previously, the connection was simply closed.
* waitforConnection() was not working right.
* Moved session-id generation to Node
* Added credit-control example
* Raw packets were not logged with log-level=FINEST
* AVP.setM() method added
* Shutting down a node could in some cases result in a NullPointerException
  in "Diameter node reconnect thread"

Changes 0.9.0 -> 0.9.1
* Node.waitForConnection() and NodeManager.waitForConnection() added.
* AVP.vendor_id was not being reset on reused AVPs when calling decode()
* Made dk.i1.diameter.Messageheader constructors public
* With certain malformed origin-host-id values from peers the Node thread
  would encounter a NullPointerException because java.net.URI could not
  parse the URI.
* Potential race condition fix with sending messages to a peer after it
  was marked ready but before a CEA was sent.
* Faster detection of non-diameter traffic on sockets
* CER, DWR, DPR always had the hop-by-hop-identifier set to 0.